alb.tf
# Application Load Balancer
resource "aws_lb" "app_alb" {
  name               = "bluegreen-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]

  subnets = [
    aws_subnet.public.id,
      aws_subnet.public_b.id
  ]

  enable_deletion_protection = false

  tags = {
    Name = "BlueGreenALB"
  }
}

# Target Group Blue
resource "aws_lb_target_group" "blue" {
  name     = "blue-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "BlueTargetGroup"
  }
}

# Target Group Green
resource "aws_lb_target_group" "green" {
  name     = "green-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }

  tags = {
    Name = "GreenTargetGroup"
  }
}

# Listener HTTP (puerto 80)
resource "aws_lb_listener" "http_listener" {
    load_balancer_arn = aws_lb.app_alb.arn
      port              = 80
        protocol          = "HTTP"

          default_action {
                type = "forward"
                    forward {
                            target_group {
                                      arn    = aws_lb_target_group.blue.arn
                                              weight = 80
                                                    }
                                                          target_group {
                                                                    arn    = aws_lb_target_group.green.arn
                                                                            weight = 20
                                                                                  }
                                                                                      }
                                                                                        }
                                                                                      }
